style.scss
---
---

/* If these are changed, make sure to update theme colors in the header and the map on contact page */
$seedplus-gray: #373535;
$jungle-blue: #05568A;

$vertical-page-margin: 2rem;
$horizontal-page-margin: 3rem;

$underline-width: 0.33rem;
@mixin border-underline($color) {
  border-bottom: $underline-width solid $color;
  transition: border-bottom .1s;
}

* {
  /* Safari bug workaround; flex children can shrink arbitrarily otherwise */
  flex: 0 0 auto;
}

html {
  height: 100%;
  font-family: 'Raleway', sans-serif;
  font-weight: 400;
  font-size: 14px;
  color: $seedplus-gray;
}

body {
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  width: 100%;
  height: 100%;
  padding: 0;
  margin: 0;
}

a, a:hover, a:visited, a:active {
  color: $seedplus-gray;
}

h3 > a {
  text-decoration: none;
}

#content {
  width: 100%;
  max-width: 1000px;
  flex: 1 0 auto;
  box-sizing: border-box;
  padding: $vertical-page-margin $horizontal-page-margin;

  display: flex;
  flex-direction: column;
}

footer {
  width: 100%;
  background-color: $seedplus-gray;
  font-weight: 400;
  padding: 1rem 0;
  text-align: center;

  & > p {
    margin: 0 auto;
    color: white;
  }

  & a, & a:hover, & a:visited, & a:active {
    color: white;
    text-decoration: underline;
  }
}

$logo-height: 0.75 * 3rem;
$logo-hamburger-height-difference: 1rem;
$logo-bottom-padding: 1.5rem;

#menu {
  padding: 0;
  margin: 0 (-0.5rem) $logo-bottom-padding (-0.5rem);

  display: flex;
  flex-flow: row;
  justify-content: space-between;
  align-items: baseline;
}

#menu #hamburger {
  display: none;
}

#menu > li {
  flex: 1 0 auto;
  margin: 0 0.5rem;

  display: block;
  text-align: right;
  font-size: 1.8rem;
  font-weight: 900;
  text-transform: uppercase;
}

#menu > li:first-child {
  display: flex;
  flex-flow: row;
  justify-content: space-between;
  align-items: flex-end;

  flex: 3 0 auto;
}

#menu a {
  text-decoration: none;
  @include border-underline(transparent);
}

#menu a.current {
  @include border-underline($jungle-blue);
}

#menu a:hover {
  @include border-underline($seedplus-gray);
}

#logo {
  height: $logo-height;
}

@media (max-width: 768px) {
  #menu:not(.expanded) li:not(:first-child) {
    display: none;
  }

  #menu.expanded > li:first-child {
    margin-bottom: $logo-bottom-padding;
  }

  #menu #hamburger {
    & svg {
      height: $logo-height - $logo-hamburger-height-difference;
    }
    display: inline;
    fill: $seedplus-gray;
    padding: ($vertical-page-margin + $logo-hamburger-height-difference) $horizontal-page-margin ($logo-bottom-padding + $underline-width) $horizontal-page-margin;
    margin: (-$vertical-page-margin - $logo-hamburger-height-difference) (-$horizontal-page-margin) (-$logo-bottom-padding) 0;
  }

  #menu.expanded #hamburger {
    fill: white;
    background-color: $seedplus-gray;
  }

  #menu.expanded {
    flex-flow: column;
    align-items: stretch;
    margin-bottom: 0;
  }

  #menu.expanded li:not(:first-child) {
    &, & a, & a:hover, & a:visited, & a:active
    {
      color: white;
    }

    & a:hover {
      @include border-underline(white);
    }

    background-color: $seedplus-gray;
    text-align: left;
    padding: 0.5rem calc(3rem + 1rem);
    margin: 0 -3rem;
  }

  #menu.expanded li:last-child {
    padding-bottom: 1.5rem;
  }
  #menu.expanded li:nth-child(2) {
    padding-top: 1.5rem;
  }
}

div.page-header {
  max-width: 700px;
  margin: 5rem 0 1rem 0;
  padding: 1rem;
  flex: 1 0 auto;
}

div.page-header > h1 {
  display: inline;
  font-size: 7rem;
  font-weight: 800;
  text-transform: uppercase;
  color: white;
  background-color: $jungle-blue;
  line-height: 0.96em;
  white-space: nowrap;
  box-decoration-break: clone;
  /* TODO: this should be only box-decoration-break once support is common enough */
  box-shadow: 1rem 0 0 $jungle-blue, -1rem 0 0 $jungle-blue;
}

@media (max-width: 768px) {
  div.page-header {
    margin: 3rem 0 0 0;
    margin: calc((100vw - 2*#{$horizontal-page-margin})/10) 0 0 0;
  }
  div.page-header > h1 {
    font-size: calc((100vw - 2*#{$horizontal-page-margin})/7);
    font-size: 13vm;
  }
}

div.section-banner {
  margin: 3rem 0 1rem 0;
  flex: 1 0 auto;
}

div.info-group {
  margin: 1rem -1rem 0 -1rem;

  display: flex;
  flex-direction: row;
}

div.info-item {
  flex: 2 2 0;
  margin: 1rem;
}

div.info-item h4:not(:first-of-type) {
  margin-top: 2rem;
}

div.info-sidebar {
  flex: 0 0 auto;
  margin: 1rem;
  width: 12rem;
}

div.bio-portrait {
  flex: 1 2 10rem;
  margin: 1rem;
  margin-top: 1.35rem;

  background-position: 50% 10%;
  background-size: cover;
}

div.bio-contact {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;

  margin: 0 -0.5rem;
}

div.bio-contact svg {
  display: block;
  margin: 0 0.5rem;
}

div.info-group:nth-of-type(2n) > div.bio-portrait {
  order: 2;
}

@media (max-width: 768px) {
  div.info-group {
    flex-direction: column;
  }

  div.info-group + div.info-group {
    margin-top: 0;
  }

  div.info-item {
    flex: 1 0 auto;
  }

  div.bio-portrait {
    flex: 1 0 auto;
    height: 500px;
    height: 100vw;
  }

  div.info-group:nth-of-type(2n) > div.info-item {
    order: 0;
  }
}

h4 {
  margin: 0;
  padding-left: 1.5rem;
  font-size: 1.8rem;
  font-weight: 900;
  /* TODO: there might be a better way of doing this */
  /* border-left: 0.5rem solid $jungle-blue; */
  box-shadow: inset 0 0.2em white, inset 0.5rem 0 0 $jungle-blue;
}

h5 {
  margin: 0;
  padding-left: 1.5rem;
  font-size: 1rem;
  font-weight: 500;
  box-shadow: inset 0 0.2em white, inset 0.5rem 0 0 $jungle-blue;
}

h4 ~ h5 {
  padding-top: 0.5rem;
  box-shadow: inset 0.5rem 0 0 $jungle-blue;
}

p {
  color: black;
  line-height: 1.8rem;
  margin-bottom: 0;
}

div.contact-map {
  flex: 20 0 30rem;
  background-color: lighten($seedplus-gray, 90%);
}

@media (max-width: 768px) {
  div.contact-map {
    flex-basis: 500px;
    flex-basis: 50vh;

    margin: 0 (-$horizontal-page-margin);
  }
}

.contact {
  display: flex;
  flex: 10 0 auto;
  flex-flow: row wrap;
  align-content: flex-end;

  margin: 2rem -0.5rem 1rem -0.5rem;
}

.contact-address {
  align-items: flex-start;
  margin-top: 3rem;
}

.contact-footer {
  align-items: flex-end;
}

.contact > h3 {
  display: block;
  flex: 1 0 auto;
  margin: 0.4+0.3rem 0.5rem 0.4+0.3rem 0.5rem;
}

.contact > h2 {
  margin: 0.3rem 1.2rem;
}

.contact svg, .bio-contact svg {
  background-color: $jungle-blue;
  fill: white;
  height: 1.8rem;
  padding: 0.5rem;
  margin: 0.3rem 0.5rem;
}

h3 {
  font-size: 1.8rem;
  font-weight: 500;

}

h2 {
  display: inline;
  font-size: 1.8rem;
  font-weight: 800;
  text-transform: uppercase;
  color: white;
  background-color: $jungle-blue;
  margin: 0 0.7rem;
  padding: 0.4rem 0;
  /* TODO: this should be box-decoration-break once support is common enough */
  box-shadow: 0.7rem 0 0 $jungle-blue, -0.7rem 0 0 $jungle-blue;
}

